--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background: url("background1.jpg") bottom center;
+    /* background: url("background7.svg") bottom center; */
+    background-color: #381068;
     background-size: cover;
     color: white;
     margin: 0;
@@ -11,3 +12,28 @@ html {
     text-align: center;
     font-size: 24px;
 }
+
+img {
+    max-width: 200px;
+}
+
+.container {
+    text-align: center;
+}
+
+h3 {
+    font-size: 22px;
+}
+
+.icons {
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+}
+
+.score {
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+}
+
