--- a/style.css
+++ b/style.css
@@ -6,34 +6,80 @@ html {
     color: white;
     margin: 0;
     padding: 0;
+    font-size: 18px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
 }
 
 .header {
     text-align: center;
-    font-size: 24px;
+    font-size: 34px;
 }
 
 img {
     max-width: 200px;
 }
 
-.container {
-    text-align: center;
-}
-
 h3 {
     font-size: 22px;
 }
 
+
+
+.score,
 .icons {
     display: flex;
     justify-content: center;
     gap: 150px;
 }
 
-.score {
+#status-update {
     display: flex;
     justify-content: center;
-    gap: 150px;
 }
 
+.choice-icons {
+    display: flex;
+    justify-content: center;
+    gap: 36px;
+    margin: 140px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    padding-top: 12px;
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+}
+
+.column:hover {
+    box-shadow: 0 0 10px #f364a7;
+    cursor: pointer;
+  }
+
+
+h4 {
+    text-align: center;
+    font-size: 20px;
+}
+
+
+a {
+    /* this removes the line under our links */
+    text-decoration: none;
+    color: white;
+  }
+
+  .footer {
+    font-style: italic;
+    display: flex;
+    gap: 4px;
+    justify-content: end;
+    margin: 16px;
+  }
