--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background: url("background9.svg") bottom center;
+    background: url("background2.jpg") bottom center;
+    /* background: url("background1.jpg") center; */
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
@@ -16,6 +16,8 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+    font-family: 'Luckiest Guy', cursive;
 }
 
 .header {
