--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
-    font-family: 'Luckiest Guy', cursive;
+    font-family: 'Bungee', sans-serif;    
 }
 
 .header {
@@ -26,7 +25,7 @@ body {
 }
 
 img {
-    max-width: 200px;
+    max-width: 180px;
 }
 
 h3 {
@@ -46,11 +45,16 @@ h1 {
     margin: 40px 10px;
 }
 
-.score,
-.icons {
+.score {
     display: flex;
     justify-content: center;
     gap: 150px;
+}
+
+.icons {
+    display: flex;
+    justify-content: center;
+    gap: 170px;
 }
 
 #status-update {
@@ -71,6 +75,7 @@ h1 {
     padding-top: 12px;
     border: 2px solid #ffffff;
     border-radius: 5px;
+    padding: 20px;
 }
 
 .column:hover {
@@ -82,14 +87,15 @@ h1 {
 h4 {
     text-align: center;
     font-size: 20px;
+    margin-top: 26px;
+    margin-bottom: 0;
 }
-
 
 a {
     /* this removes the line under our links */
     text-decoration: none;
     color: white;
-  }
+}
 
   .footer {
     font-style: italic;
@@ -97,4 +103,4 @@ a {
     gap: 4px;
     justify-content: end;
     margin: 16px;
-  }
+}
