--- a/style.css
+++ b/style.css
@@ -79,8 +79,11 @@ h1 {
 }
 
 .column:hover {
-    box-shadow: 0 0 10px #a3246f;
+    /* box-shadow: 0 0 20px #a3246f; */
+    transform: scale(1.1);
     cursor: pointer;
+    border-color: #a3246f;
+    background-color:#a3246f ;
   }
 
 
@@ -97,10 +100,87 @@ a {
     color: white;
 }
 
-  .footer {
+.footer {
     font-style: italic;
     display: flex;
     gap: 4px;
     justify-content: end;
     margin: 16px;
+}
+
+/* Adding the pop-up */
+.hidden {
+    display: none;
+}
+  
+#popupOverlay,
+#popupOverlay2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+  
+#popupContent,
+#popupContent2 {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #581f63;
+    padding-top: 50px;
+    padding-bottom: 70px;
+    padding-left: 120px;
+    padding-right: 120px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+#popupContent > h2 {
+    padding-bottom: 20px;
+    font-size: 1.7em;
+}
+
+#name {
+    font-size: 16px;
+    font-family: 'Bungee', sans-serif;
+    color: #2c0f3b;
+    padding: 8px;
+}
+
+#name-submit {
+    font-size: 16px;
+    font-family: 'Bungee', sans-serif;
+    color: white;
+    background-color: #a3246f;
+    border: 2px solid #a3246f;
+    padding: 8px;
+    border-radius: 2px;
+}
+
+#name-submit:hover {
+    cursor: pointer;
+    background-color: #2c0f3b;
+    border: 2px solid #2c0f3b;
+    color: white;
+}
+
+button {
+    font-size: 18px;
+    font-family: 'Bungee', sans-serif;
+    background-color: #a3246f;
+    border: 2px solid #a3246f;
+    padding: 10px;
+    border-radius: 4px;
+    margin-top: 20px;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: #2c0f3b;
+    border: 2px solid #2c0f3b;
+    color: white;
 }
